# hubble

./: CMakeLists.txt  Kconfig  README.md  esp32.overlay  prj.conf
src/: main.c
src/hal/: io_driver.c  io_driver.h  spi_driver.c  spi_driver.h
src/st25r39/RFAL/include/: rfal_analogConfig.h  rfal_chip.h  rfal_isoDep.h  rfal_nfcDep.h  rfal_nfcv.h  rfal_rf.h
src/st25r39/RFAL/source/: rfal_analogConfig.c  rfal_crc.c  rfal_crc.h  rfal_dpo.c  rfal_iso15693_2.c  rfal_iso15693_2.h  rfal_isoDep.c  rfal_nfcDep.c  rfal_nfca.c  rfal_nfcb.c  rfal_nfcf.c  rfal_nfcv.c  rfal_st25tb.c  rfal_t1t.c
src/st25r39/RFAL/source/st25r3916/: rfal_dpoTbl.h  rfal_rfst25r3916.c  st25r3916.c  st25r3916.h  st25r3916_aat.c  st25r3916_aat.h  st25r3916_com.c  st25r3916_com.h  st25r3916_irq.c  st25r3916_irq.h  st25r3916_led.c  st25r3916_led.h
src/st25r39/esp32/include/: common.h  esp32_app.h  esp32_config.h  esp32_st25r.h  hal_timer.h  logger.h  platform.h
src/st25r39/esp32/src/: esp32_app.c  esp32_st25r.c  hal_timer.c  rfal_analog_config_custom_mb1414_b_v1.c
src/st25r39/lib_nfc/lib_NDEF/src/: lib_NDEF.c  lib_NDEF_Handover.c  lib_wrapper.c  tagtype3_wrapper.c  tagtype4_wrapper.c  tagtype5_wrapper.c
src/st25r39/utils/include/: st_errno.h  st_utils.h
src/st25r39/utils/source/: st_error.c
st25r3911b/: Kconfig  st25r3911b_common.c  st25r3911b_nfca.c  st25r3911b_reg.h  st25r3911b_spi.c
